--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,56 +56,56 @@
         android:layout_alignParentStart="true" />
 
 
-    <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Begin"-->
-        <!--android:id="@+id/connectBT"-->
-        <!--android:layout_below="@+id/editText"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:onClick="onClickStart"/>-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Begin"
+        android:id="@+id/connectBT"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="onClickStart"/>
 
-    <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Send"-->
-        <!--android:id="@+id/buttonSend"-->
-        <!--android:onClick="onClickSend"-->
-        <!--android:layout_below="@+id/editText"-->
-        <!--android:layout_toRightOf="@+id/connectBT"-->
-        <!--android:layout_toEndOf="@+id/connectBT" />-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send"
+        android:id="@+id/buttonSend"
+        android:onClick="onClickSend"
+        android:layout_below="@+id/editText"
+        android:layout_toRightOf="@+id/connectBT"
+        android:layout_toEndOf="@+id/connectBT" />
 
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/textView"-->
-        <!--android:layout_below="@+id/buttonSend"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_alignRight="@+id/editText"-->
-        <!--android:layout_alignEnd="@+id/editText"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:singleLine="true" />-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_below="@+id/buttonSend"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText"
+        android:layout_alignParentBottom="true"
+        android:singleLine="true" />
 
-    <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Stop"-->
-        <!--android:id="@+id/buttonStop"-->
-        <!--android:layout_below="@+id/editText"-->
-        <!--android:layout_toRightOf="@+id/buttonSend"-->
-        <!--android:layout_toEndOf="@+id/buttonSend"-->
-        <!--android:onClick="onClickStop"/>-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stop"
+        android:id="@+id/buttonStop"
+        android:layout_below="@+id/editText"
+        android:layout_toRightOf="@+id/buttonSend"
+        android:layout_toEndOf="@+id/buttonSend"
+        android:onClick="onClickStop"/>
 
-    <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Clear"-->
-        <!--android:id="@+id/buttonClear"-->
-        <!--android:layout_below="@+id/editText"-->
-        <!--android:layout_toRightOf="@+id/buttonStop"-->
-        <!--android:layout_toEndOf="@+id/buttonStop"-->
-        <!--android:onClick="onClickClear"/>-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear"
+        android:id="@+id/buttonClear"
+        android:layout_below="@+id/editText"
+        android:layout_toRightOf="@+id/buttonStop"
+        android:layout_toEndOf="@+id/buttonStop"
+        android:onClick="onClickClear"/>
 </RelativeLayout>
 
