--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,19 +5,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            android:fillViewport="true">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/mapsTextView"
-                android:text="|"
-                android:layout_alignParentBottom="true"
-                />
-        </ScrollView>
+
         <fragment
             android:id="@+id/map"
             android:layout_weight="1"
@@ -29,7 +17,7 @@
             android:id="@+id/iamfab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
+            android:layout_gravity="bottom|start"
             android:layout_margin="16dp"
             android:src="@mipmap/ic_launcher_round"
             app:elevation="4dp"
